# nlpf-2

./: Cargo.toml  Dockerfile  README.md  cypress.config.js  data.md  docker-compose.yml  package-lock.json
.github/workflows/: docker.yml  rust.yml
cypress/e2e/1-company/: 1-registration.cy.js  2-questionnaire.cy.js  3-offer.cy.js  6-candidacy.cy.js
cypress/e2e/2-candidate/: 4-registration.cy.js  5-candidacy.cy.js
settings/: config.yaml
src/: config.rs  greet.rs  homepage.rs  main.rs  neo_test.rs  s3_test.rs
src/candidacies/: crud.rs  mod.rs  models.rs  routes.rs
src/offer/: crud.rs  mod.rs  models.rs  routes.rs
src/questionnaires/: crud.rs  mod.rs  models.rs  routes.rs
src/users/: crud.rs  mod.rs  models.rs  routes.rs
src/utils/: s3.rs
templates/: base.html  candidate_infos.html  create_questionnaire.html  hello.html  index.html  questionnaires.html  signup.html  users_infos.html
templates/candidacies/: candidacies.html  candidacies_by_offer.html  candidacy.html  candidacy_by_offer.html  create_candidacy.html  post_accept_candidacy.html  post_create_candidacy.html  post_refuse_candidacy.html  view_candidacy.html
templates/components/: navbar.html
templates/offers/: create_offer.html  offer.html  offers.html  post_create_offer.html  view_offer.html
templates/questionnaires/: create_questionnaire.html  questionnaires.html
templates/signup/: index.html  success.html
