[package]
name = "nlpf-2"
version = "0.1.0"
edition = "2021"
description = "NLPF-2 | JobBoard"
authors = ["Transformeurs SIGL 2023"]
repository = "https://github.com/transformeurs/nlpf-2"

[dependencies]
# askama is a HTML template engine for Rust
# use git versions because https://github.com/djc/askama/issues/658
askama = { version = "0.11", git = "https://github.com/djc/askama.git", rev = "c441459a27eb7c0c476ce70833e05224ba6894fd" }
askama_axum = { version = "0.1", git = "https://github.com/djc/askama.git", rev = "c441459a27eb7c0c476ce70833e05224ba6894fd" }
# axum is a web framework for Rust
axum = "0.5"
# neo4rs is for using Neo4j with Rust
neo4rs = "0.5.9"
# tokio is an async runtime for Rust
tokio = { version = "1", features = ["full"] }
# tracing is for logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.4", features = ["trace"] }
# aws crates for using S3 (minio)
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
# config is used to load the YAML config file
config = { version = "0.13.2", features = ["yaml"], default-features = false }
# serde is used for serialization/de-serialization
serde = "1.0.146"
serde_with = "2.0.1"
